<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voodoo OTA RootKeeper</string>
    <string name="introduction_title">Introduction:</string>
    <string name="introduction">This app saves a protected copy of \"su\"
		for devices already rooted.\nIf you loose root permissions after an
		OTA update, RootKeeper might be able to restore it.</string>
    <string name="works_with_title">Works with:</string>
    <string name="works_with">Any device using Ext3 or Ext4 filesystem and Google
		style incremental OTA update.zip</string>
    <string name="useless_with_title">Useless with:</string>
    <string name="useless_with">Samsung phones updated via KIES or Odin and older
		devices using YAFFS filesystems only, any device flashing entiere
		system partition.</string>
    <string name="status_title">Status:</string>
    <string name="superuser_apk_installed">Superuser app installed</string>
    <string name="device_rooted">Device rooted</string>
    <string name="permission_granted">Root permission granted</string>
    <string name="fs_supported">/system supports root protection</string>
    <string name="su_protected">Protected su copy available</string>
    <string name="install_google_play">Google Play</string>
    <string name="protect_root">Protect root</string>
    <string name="restore_root">Restore root</string>
    <string name="backup_root">Backup root</string>
    <string name="toast_su_protected">root su protected</string>
    <string name="toast_su_backup">root su simple backup completed</string>
    <string name="toast_su_restore">root su restored</string>
    <string name="toast_su_delete_backup">root su backup deleted</string>
    <string name="toast_su_protection_error">Error when upgrading su backup.
        You need to send a logcat error report to developer</string>
    <string name="toast_unroot">Device un-rooted! (with backup)</string>
    <string name="delete_backup">Delete su backup</string>
    <string name="unroot">Temp. un-root\n(keeps backup)</string>
    <string name="notes_title">Notes:</string>
    <string name="notes">If you\'re using both Superuser and SuperSU,
        take care keeping application and su backup consistent.</string>
    <string name="author_title">Author:</string>
    <string name="credits">Application by François Simond aka supercurio
        \nFollow on Twitter:\nhttps://twitter.com/supercurio
        \n\nMore apps:\nhttps://play.google.com/store/apps/developer?id=supercurio+-+Project+Voodoo
        \n\nXDA discussion thread for community help and support\nhttp://forum.xda-developers.com/showthread.php?t=1241517</string>

</resources>